--- a/tugaspertemuan8.html
+++ b/tugaspertemuan8.html
@@ -25,7 +25,12 @@
 
        <table cellspacing="50" cellpadding="0">
        <tr>
-      <td collspan="2" width="800px"><h1>Title</h1>Saya beruntung memiliki dan dekat dengan hampir semua teman kuliah termasuk arif. Sedari kuliah saya memang berusaha mengenal teman-teman kuliah saya dan berusaha mengetahui latar belakang dan pekerjaan teman-teman.arif ini sepertinya satu-satunya teman kuliah saya yang berprofesi sebagai Programmer pada saat itu. Mengetahui hal tersebut dan berkaca pada lemahnya saya urusan praktek komputer dan programming, saya berusaha lebih dekat dengan arif agar bisa belajar coding.Saya berusaha beberapa kali membantu ketika arif kesulitan memahami berbagai pelajaran teori dan saya sendiri bertanya padanya soal praktek dan programming.<th width="300px" height="100px" bgcolor="pink">Sidebar</td></th></p>
+      <td collspan="2" width="800px"><h1>Title</h1>Saya beruntung memiliki dan dekat dengan hampir semua teman kuliah termasuk arif. 
+      Sedari kuliah saya memang berusaha mengenal teman-teman kuliah saya dan berusaha mengetahui latar belakang dan pekerjaan teman-teman.
+      arif ini sepertinya satu-satunya teman kuliah saya yang berprofesi sebagai Programmer pada saat itu. 
+      Mengetahui hal tersebut dan berkaca pada lemahnya saya urusan praktek komputer dan programming, 
+      saya berusaha lebih dekat dengan arif agar bisa belajar coding.Saya berusaha beberapa kali membantu ketika arif kesulitan
+      memahami berbagai pelajaran teori dan saya sendiri bertanya padanya soal praktek dan programming.<th width="300px" height="100px" bgcolor="pink">Sidebar</td></th></p>
 
         </tr>
      </table>
